--- a/progressivis/server/templates/heatmap.html
+++ b/progressivis/server/templates/heatmap.html
@@ -3,19 +3,29 @@
 {% block title %}
 Heatmap for module {{id}}
 {% endblock %}
-
+{% block head %}
+  {{ super() }}
+<link href="{{ url_for('progressivis.server.progressivis_file', filename='css/scatterplot.css') }}" rel="stylesheet">
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+{% endblock %}
 {% block extra_scripts %}
+<script src="{{ url_for('static', filename='lib/chroma.min.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/line_graph.js') }}"></script>
 <script src="{{ url_for('progressivis.server.progressivis_file', filename='js/module.js') }}"></script>
-<script src="{{ url_for('progressivis.server.progressivis_file', filename='lib/heatmap.js') }}"></script>
-<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/heatmap-img.js') }}"></script>
+<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/history.js') }}"></script>
+<script src="{{ url_for('progressivis.server.progressivis_file', filename='lib/multiclass-density-maps.js') }}"></script>
+<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/multiclass2d.js') }}"></script>
+<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/colormaps.js') }}"></script>
 
-<script src="{{ url_for('progressivis.server.progressivis_file', filename='js/heatmap.js') }}"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="https://unpkg.com/react@15/dist/react.min.js"> </script>
+<script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
+<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 {% endblock %}
 
 {% block script %}
 var module_id = "{{id}}";
-$(document).ready(heatmap_ready);
+$(document).ready(multiclass2d_ready);
 {% endblock %}
 
 {% block content %}
@@ -31,18 +41,10 @@ $(document).ready(heatmap_ready);
 
 <!-- Nav tabs -->
   <ul id='nav-tabs' class="nav nav-tabs" role="tablist">
-    <li role="presentation" class="active"><a href="#heatmap" aria-controls="heatmap" role="tab" data-toggle="tab">Heatmap</a></li>
+    <li role="presentation" class="active"><a href="#scatterpanel" aria-controls="scatterpanel" role="tab" data-toggle="tab">Heatmap</a></li>
     <li role="presentation"><a href="#module" aria-controls="module" role="tab" data-toggle="tab">Module</a></li>
   </ul>
-
-  <!-- Tab panes -->
-  <div class="tab-content">
-    <div role="tabpanel" class="tab-pane active" id="heatmap"><div id='heatmap'></div></div>
-    <div role="tabpanel" class="tab-pane" id="module"><div id='module'></div></div>
-  </div>
-<div>
-</div>
-
-<div id="heatmapContainer" style="width:512px; height:512px;visibility: hidden;"></div>
+{% include 'mdm_tab_panes.html' %} 
+<script>$("#filter").hide();$("#historyGrp").hide()</script>
 
 {% endblock %}
