add KernelDensity module+example

--- a/progressivis/server/templates/_base.html
+++ b/progressivis/server/templates/_base.html
@@ -12,7 +12,7 @@
     path { 
       stroke: steelblue;
       stroke-width: 2;
-      fill: none;
+      /*fill: none;*/
       }
     .axis path, .axis line {
       fill: none;
