new draft with demo

--- a/progressivis/server/templates/_page_base.html
+++ b/progressivis/server/templates/_page_base.html
@@ -12,7 +12,7 @@
   {% block extra_scripts %}
   {% endblock %}
   <script type="text/javascript">
-    $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+    $SCRIPT_ROOT = {{ script_root|tojson|safe }};
     {{ self.script() }}
   </script>
 {% endblock %}
@@ -25,15 +25,6 @@
     <li><a href="{{ url_for('progressivis.server.about') }}">About</a></li>
     <li><a href="{{ url_for('progressivis.server.contact') }}">Contact</a></li>
     {% endcall %}
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-      {% for message in messages %}
-      <li>{{ message }}</li>
-      {% endfor %}
-    </ul>
-    {% endif %}
-    {% endwith %}
     <div class="row">
       <div id='error'></div>
       {% block content %}
